feat: add graylog and readonly mode

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+IS_READONLY_MODE=1                     # not required => 0 = false / 1 = true
+
 MAIL_VALIDATION_FROM=""
 MAIL_VALIDATION_SUBJECT=""
 
@@ -10,6 +12,8 @@ PRINT_ALARM_MAIL="false"            # true or false
 PRINT_ALARM_MAIL_AMOUNT="3"         
 PRINT_CLOSING_MAIL="false"          # true or false 
 PRINT_CLOSING_MAIL_AMOUNT="1"
+
+GRAYLOG_HOST=""
 
 SMB_HOST=""
 SMB_USERNAME=""
